objects/DemoObj__c.object
<CustomObject>
    <fields>
        <fullName>CheckObj__c</fullName>
        <label>CheckObj</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jun1st__c</fullName>
        <label>Jun1st</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumbOfFields__c</fullName>
        <label>NumbOfFields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberCount__c</fullName>
        <label>NumberCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DemoObj</label>
    <nameField>
        <label>DemoObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>